# fixed_point_operation

./: CMakeLists.txt  fixed_point_op.cpp  fixed_point_op.h  fixed_point_operation.cpp  fixed_point_operation.h  main.cpp  readme.md
