CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
project(fixed_point_op)
set(SRC_LIST main.cpp fixed_point_op.cpp)
include_directories(${PROJECT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY $<1:${CMAKE_SOURCE_DIR}/prebuilt>)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  $<1:${CMAKE_SOURCE_DIR}/prebuilt>)
add_executable(fixed_point_op ${SRC_LIST})
